March 15 1006 Done minus RUNTIME ERROR

--- a/baekjoon/1006_Jan22.ipynb
+++ b/baekjoon/1006_Jan22.ipynb
@@ -989,6 +989,234 @@
     "\n",
     "    print(count)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션3: 상수처리되어 있던 8을 N으로 바꿈 --> 런타임에러\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "T = int(sys.stdin.readline())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, W = map(int, sys.stdin.readline().split())\n",
+    "    enemies = dict(enumerate(map(int, sys.stdin.readline().split())))\n",
+    "\n",
+    "    areas = list(range(1, 2 * N + 1))\n",
+    "    count = 0\n",
+    "\n",
+    "    inner_areas = list(range(1, N + 1))\n",
+    "    outer_areas = list(range(N + 1, 2 * N + 1))\n",
+    "\n",
+    "    while len(areas) > 0:\n",
+    "        current = areas[0]\n",
+    "\n",
+    "        adjoint = [inner_areas[(inner_areas.index(current) + 1) % N], inner_areas[(inner_areas.index(current) + 7) % N],\n",
+    "                   current + N] if current < N+1 else [outer_areas[(outer_areas.index(current) + 1) % N], outer_areas[(outer_areas.index(current) + N-1) % N], current - N]\n",
+    "\n",
+    "        for joint in adjoint:\n",
+    "            if joint not in areas:\n",
+    "                adjoint.remove(joint)\n",
+    "\n",
+    "        dispatchable = [joint for joint in adjoint if enemies[current - 1] + enemies[joint - 1] <= W]\n",
+    "\n",
+    "        if len(dispatchable) == 1:\n",
+    "            areas.remove(current)\n",
+    "            areas.remove(dispatchable[0])\n",
+    "            count += 1\n",
+    "\n",
+    "        elif len(dispatchable) == 0:\n",
+    "            areas.remove(current)\n",
+    "            count += 1\n",
+    "\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션4: while문 탈출 조건을 명시적으로 줌 --> 런타임 에러\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "T = int(sys.stdin.readline())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, W = map(int, sys.stdin.readline().split())\n",
+    "    enemies = dict(enumerate(map(int, sys.stdin.readline().split())))\n",
+    "\n",
+    "    areas = list(range(1, 2 * N + 1))\n",
+    "    count = 0\n",
+    "\n",
+    "    inner_areas = list(range(1, N + 1))\n",
+    "    outer_areas = list(range(N + 1, 2 * N + 1))\n",
+    "\n",
+    "    while True:\n",
+    "        current = areas[0]\n",
+    "\n",
+    "        adjoint = [inner_areas[(inner_areas.index(current) + 1) % N], inner_areas[(inner_areas.index(current) + N-1) % N],\n",
+    "                   current + N] if current < N+1 else [outer_areas[(outer_areas.index(current) + 1) % N], outer_areas[(outer_areas.index(current) + N-1) % N], current - N]\n",
+    "\n",
+    "        for joint in adjoint:\n",
+    "            if joint not in areas:\n",
+    "                adjoint.remove(joint)\n",
+    "\n",
+    "        dispatchable = [joint for joint in adjoint if enemies[current - 1] + enemies[joint - 1] <= W]\n",
+    "\n",
+    "        if len(dispatchable) == 1:\n",
+    "            areas.remove(current)\n",
+    "            areas.remove(dispatchable[0])\n",
+    "            count += 1\n",
+    "\n",
+    "        elif len(dispatchable) == 0:\n",
+    "            areas.remove(current)\n",
+    "            count += 1\n",
+    "\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        if len(areas) == 1:\n",
+    "            count += 1\n",
+    "            break\n",
+    "\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션5:\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "T = int(sys.stdin.readline())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, W = map(int, sys.stdin.readline().split())\n",
+    "    enemies = dict(enumerate(map(int, sys.stdin.readline().split())))\n",
+    "\n",
+    "    areas = list(range(1, 2 * N + 1))\n",
+    "    count = 0\n",
+    "\n",
+    "    inner_areas = list(range(1, N + 1))\n",
+    "    outer_areas = list(range(N + 1, 2 * N + 1))\n",
+    "\n",
+    "    while True:\n",
+    "        current = areas[0]\n",
+    "\n",
+    "        adjoint = [inner_areas[(inner_areas.index(current) + 1) % N], inner_areas[(inner_areas.index(current) + N-1) % N],\n",
+    "                   current + N] if current < N+1 else [outer_areas[(outer_areas.index(current) + 1) % N], outer_areas[(outer_areas.index(current) + N-1) % N], current - N]\n",
+    "\n",
+    "        for joint in adjoint:\n",
+    "            if joint not in areas:\n",
+    "                adjoint.remove(joint)\n",
+    "\n",
+    "        dispatchable = [joint for joint in adjoint if enemies[current - 1] + enemies[joint - 1] <= W]\n",
+    "\n",
+    "        if len(dispatchable) == 1:\n",
+    "            areas.remove(current)\n",
+    "            areas.remove(dispatchable[0])\n",
+    "            count += 1\n",
+    "\n",
+    "        elif len(dispatchable) == 0:\n",
+    "            areas.remove(current)\n",
+    "            count += 1\n",
+    "\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        if len(areas) == 1:\n",
+    "            count += 1\n",
+    "            break\n",
+    "\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-119-479206ce1b17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mT\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "#솔루션5:\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "T = int(sys.stdin.readline())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, W = map(int, sys.stdin.readline().split())\n",
+    "    enemies = dict(enumerate(map(int, sys.stdin.readline().split())))\n",
+    "\n",
+    "    areas = list(range(1, 2 * N + 1))\n",
+    "    count = 0\n",
+    "\n",
+    "    inner_areas = list(range(1, N + 1))\n",
+    "    outer_areas = list(range(N + 1, 2 * N + 1))\n",
+    "\n",
+    "    while True:\n",
+    "        current = areas[0]\n",
+    "\n",
+    "        adjoint = [inner_areas[(inner_areas.index(current) + 1) % N], inner_areas[(inner_areas.index(current) + N-1) % N],\n",
+    "                   current + N] if current < N+1 else [outer_areas[(outer_areas.index(current) + 1) % N], outer_areas[(outer_areas.index(current) + N-1) % N], current - N]\n",
+    "\n",
+    "        for joint in adjoint:\n",
+    "            if joint not in areas:\n",
+    "                adjoint.remove(joint)\n",
+    "\n",
+    "        dispatchable = [joint for joint in adjoint if enemies[current - 1] + enemies[joint - 1] <= W]\n",
+    "\n",
+    "        if len(dispatchable) == 1:\n",
+    "            areas.remove(current)\n",
+    "            areas.remove(dispatchable[0])\n",
+    "            count += 1\n",
+    "\n",
+    "        elif len(dispatchable) == 0:\n",
+    "            areas.remove(current)\n",
+    "            count += 1\n",
+    "\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        if len(areas) == 1:\n",
+    "            count += 1\n",
+    "            break\n",
+    "\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
