March 18 1007 sol1 in progress

--- a/baekjoon/1007_Jan23.ipynb
+++ b/baekjoon/1007_Jan23.ipynb
@@ -272,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -288,6 +290,13 @@
    "source": [
     "np.linalg.norm(a-b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
