March 26 1007 sol1 by combination

--- a/baekjoon/1007_Jan23.ipynb
+++ b/baekjoon/1007_Jan23.ipynb
@@ -292,6 +292,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "결국 N개의 점에서 N/2개는 양의 값을, N/2개는 음의 값을 갖는 벡타가 된다.\n",
+    "\n",
+    "양 또는 음의 값을 가질 벡터 N/2개를 뽑으면서 min 값을 갱신하는 형태로 짜야한다.\n",
+    "\n",
+    "뽑는 것 --> **조합(Combination)**으로 해결할 수 있다.\n",
+    "\n",
+    "# 조합을 구현하는 방법\n",
+    "https://stack07142.tistory.com/25\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
