--- a/baekjoon/1008_Jan24.ipynb
+++ b/baekjoon/1008_Jan24.ipynb
@@ -4,7 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "백준 #1008"
+    "백준 #1008\n",
+    "\n",
+    "https://www.acmicpc.net/problem/1008"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 5\n",
+      "0.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#솔루션 1: 맞았습니다!\n",
+    "\n",
+    "A, B = map(int, input().split())\n",
+    "print(A/B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "어이없어...난이도 차이 너무 크다"
    ]
   },
   {
