--- a/baekjoon/1009_Jan25.ipynb
+++ b/baekjoon/1009_Jan25.ipynb
@@ -4,7 +4,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "백준 #1009"
+    "백준 #1009\n",
+    "\n",
+    "https://www.acmicpc.net/problem/1009"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "5\n",
+    "1 6\n",
+    "3 7\n",
+    "6 2\n",
+    "7 100\n",
+    "9 635"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1\n",
+    "7\n",
+    "6\n",
+    "1\n",
+    "9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1 6\n",
+      "1\n",
+      "3 7\n",
+      "7\n",
+      "6 2\n",
+      "6\n",
+      "7 100\n",
+      "1\n",
+      "9 635\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#솔루션 1: 시간초과\n",
+    "\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    a, b = map(int, input().split())\n",
+    "    num = a**b\n",
+    "    print(num % 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "시간복잡도라는 것을 제대로 공부해봐야겠다.\n",
+    "\n",
+    "# 시간복잡도 잡기"
    ]
   },
   {
