lev2q01 sol2 in progress

--- a/programmers/lev2q01.ipynb
+++ b/programmers/lev2q01.ipynb
@@ -165,7 +165,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#솔루션 1: 0점\n",
+    "\n",
+    "def solution(n):\n",
+    "    digits = [1, 2, 4]\n",
+    "    pows = [4**x for x in range(19)]\n",
+    "    pows.sort(reverse = True)\n",
+    "    pows_dict = {}\n",
+    "    for num in pows:\n",
+    "        if num <= n:\n",
+    "            pows_dict[len(pows) - pows.index(num)-1] = n // num\n",
+    "            n = n % num\n",
+    "        else:\n",
+    "            pows_dict[len(pows) - pows.index(num)-1] = 0\n",
+    "    answer = \"\"\n",
+    "    for key, value in pows_dict.items():\n",
+    "        if answer == \"\" and value != 0:\n",
+    "            answer += str(digits[value-1])\n",
+    "        if answer != \"\" and value == 0:\n",
+    "            answer += \"1\"\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert(n, base):\n",
+    "    T = \"0123456789ABCDEF\"\n",
+    "    q, r = divmod(n, base)\n",
+    "    if q == 0:\n",
+    "        return T[r]\n",
+    "    else:\n",
+    "        return convert(q, base) + T[r]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션 2:\n",
+    "\n",
+    "def solution(n):\n",
+    "    digits = '124'\n",
+    "    q, r = divmod(n, 3)\n",
+    "    if q == 0:\n",
+    "        return digits[r]\n",
+    "    else:\n",
+    "        return solution(n) + digits[r]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digits = '124'"
+   ]
   },
   {
    "cell_type": "code",
@@ -176,10 +238,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 3)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#몫과 나머지를 구해주는 함수\n",
+    "divmod(3, 4)"
+   ]
   },
   {
    "cell_type": "code",
