--- a/programmers/lev2q01_0730.ipynb
+++ b/programmers/lev2q01_0730.ipynb
@@ -205,19 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션 2:\n",
+    "#솔루션 2: 통과!\n",
     "\n",
     "def solution(n):\n",
     "    digits = '124'\n",
-    "    q, r = divmod(n, 3)\n",
+    "    q, r = divmod(n-1, 3)\n",
     "    if q == 0:\n",
     "        return digits[r]\n",
     "    else:\n",
-    "        return solution(n) + digits[r]\n"
+    "        return solution(q) + digits[r]\n"
    ]
   },
   {
@@ -231,14 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +240,7 @@
        "(0, 3)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +261,7 @@
        "(75, 0)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,6 +276,33 @@
    "source": [
     "후엥~~~~~"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'14'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
