내일 다시 할래

--- a/programmers/lev2q03_주식가격_0803.ipynb
+++ b/programmers/lev2q03_주식가격_0803.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#다른 풀이\n",
+    "#다른 풀이 --> 딱히 좋은 풀이인 것 같지는 않다 (속도 측면에서)\n",
     "\n",
     "def solution(prices):\n",
     "    answer = [0] * len(prices)\n",
@@ -166,7 +166,7 @@
     "            else:\n",
     "                answer[i] += 1\n",
     "                break\n",
-    "    return answer\n"
+    "    return answer"
    ]
   }
  ],
