--- a/programmers/lev2q05_멀쩡한사각형_0813.ipynb
+++ b/programmers/lev2q05_멀쩡한사각형_0813.ipynb
@@ -278,7 +278,7 @@
     "def solution(w,h):\n",
     "    unusable = 0\n",
     "    a = -h/w\n",
-    "    prev_height = h   #초기 h. y 절편이다.\n",
+    "    prev_height = h   #initial h. y 절편이다b.\n",
     "    for k in range(1, w+1):\n",
     "        height = a * k + h\n",
     "        usable = math.floor(height)\n",
@@ -290,6 +290,13 @@
     "    answer = w * h - w/count * unusable\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
