--- a/programmers/lev2q05_멀쩡한사각형_0813.ipynb
+++ b/programmers/lev2q05_멀쩡한사각형_0813.ipynb
@@ -270,8 +270,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#솔루션7: \n",
+    "\n",
+    "import math\n",
+    "\n",
+    "def solution(w,h):\n",
+    "    unusable = 0\n",
+    "    a = -h/w\n",
+    "    prev_height = h   #initial h. y 절편이다b.\n",
+    "    for k in range(1, w+1):\n",
+    "        height = a * k + h\n",
+    "        usable = math.floor(height)\n",
+    "        unusable += math.ceil(prev_height-usable)\n",
+    "        if height == usable:  #직선과 교점일 때\n",
+    "            count = k\n",
+    "            break\n",
+    "        prev_height = height\n",
+    "    answer = w * h - w/count * unusable\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution(8, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션8: \n",
     "\n",
     "import math\n",
     "\n",
