--- a/programmers/lev2q05_멀쩡한사각형_0821.ipynb
+++ b/programmers/lev2q05_멀쩡한사각형_0821.ipynb
@@ -267,78 +267,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션7: \n",
+    "#솔루션7: 최대공약수를 쓰라길래 썼다\n",
     "\n",
-    "import math\n",
     "\n",
-    "def solution(w,h):\n",
-    "    unusable = 0\n",
-    "    a = -h/w\n",
-    "    prev_height = h   #initial h. y 절편이다b.\n",
-    "    for k in range(1, w+1):\n",
-    "        height = a * k + h\n",
-    "        usable = math.floor(height)\n",
-    "        unusable += math.ceil(prev_height-usable)\n",
-    "        if height == usable:  #직선과 교점일 때\n",
-    "            count = k\n",
-    "            break\n",
-    "        prev_height = height\n",
-    "    answer = w * h - w/count * unusable\n",
-    "    return answer"
+    "def gcd(a, b):\n",
+    "    return b if a % b == 0 else gcd(b, a % b)\n",
+    "\n",
+    "\n",
+    "def solution(w, h):\n",
+    "    whole = w * h;\n",
+    "    broken = w + h - gcd(w, h)\n",
+    "    return whole - broken"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "solution(8, 12)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#솔루션8: \n",
-    "\n",
-    "import math\n",
-    "\n",
-    "def solution(w,h):\n",
-    "    unusable = 0\n",
-    "    a = -h/w\n",
-    "    prev_height = h   #initial h. y 절편이다b.\n",
-    "    for k in range(1, w+1):\n",
-    "        height = a * k + h\n",
-    "        usable = math.floor(height)\n",
-    "        unusable += math.ceil(prev_height-usable)\n",
-    "        if height == usable:  #직선과 교점일 때\n",
-    "            count = k\n",
-    "            break\n",
-    "        prev_height = height\n",
-    "    answer = w * h - w/count * unusable\n",
-    "    return answer"
+    "`math` 라이브러리에서 `gcd` 함수를 가져와서 쓸 수도 있다."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
