--- a/programmers/lev2q05_멀쩡한사각형_0821.ipynb
+++ b/programmers/lev2q05_멀쩡한사각형_0821.ipynb
@@ -271,11 +271,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션7: 최대공약수를 쓰라길래 썼다\n",
+    "#솔루션7: 최대공약수를 쓰라길래 썼다  --> 왜 이런 건지 모르겠다..........ㅠㅠ\n",
     "\n",
     "\n",
     "def gcd(a, b):\n",
-    "    return b if a % b == 0 else gcd(b, a % b)\n",
+    "    return b if a % b == 0 else gcd(b, a % b)  #재귀 방식으로 최대공약수 구하기\n",
     "\n",
     "\n",
     "def solution(w, h):\n",
