--- a/programmers/lev2q06_프린터_0822.ipynb
+++ b/programmers/lev2q06_프린터_0822.ipynb
@@ -15,6 +15,8 @@
    "source": [
     "#솔루션 1: \n",
     "\n",
+    "from collections import deque\n",
+    "\n",
     "def solution(priorities, location):\n",
     "    answer = 0\n",
     "    return answer"
