working on PRINTER

--- a/programmers/lev2q06_프린터_0822.ipynb
+++ b/programmers/lev2q06_프린터_0822.ipynb
@@ -18,7 +18,12 @@
     "from collections import deque\n",
     "\n",
     "def solution(priorities, location):\n",
-    "    answer = 0\n",
+    "    priorities_q = deque(priorities)\n",
+    "    for k in range(len(priorities)):\n",
+    "        if priorities_q[0] == max(priorities_q):\n",
+    "            pass\n",
+    "        else:\n",
+    "            \n",
     "    return answer"
    ]
   }
