--- a/programmers/lev2q06_프린터_0822.ipynb
+++ b/programmers/lev2q06_프린터_0822.ipynb
@@ -9,22 +9,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션 1: \n",
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "priorities_q = deque([1, 1, 9, 1, 1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priorities_q.popleft()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([1, 9, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priorities_q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([(0, 1), (1, 1), (2, 9), (3, 1), (4, 1), (5, 1)])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deque(enumerate([1, 1, 9, 1, 1, 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션 1: 통과\n",
     "\n",
     "from collections import deque\n",
     "\n",
     "def solution(priorities, location):\n",
-    "    priorities_q = deque(priorities)\n",
-    "    for k in range(len(priorities)):\n",
-    "        if priorities_q[0] == max(priorities_q):\n",
-    "            pass\n",
+    "    priorities_q = deque(enumerate(priorities))\n",
+    "    answer = 0\n",
+    "    while location in [loc for (loc, doc) in priorities_q]:\n",
+    "        if priorities_q[0][1] == max([doc for (loc, doc) in priorities_q]):\n",
+    "            priorities_q.popleft()\n",
+    "            answer += 1\n",
     "        else:\n",
-    "            \n",
+    "            priorities_q.append(priorities_q.popleft())\n",
+    "#         print(priorities_q, answer)\n",
     "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([(1, 1), (2, 9), (3, 1), (4, 1), (5, 1), (0, 1)]) 0\n",
+      "deque([(2, 9), (3, 1), (4, 1), (5, 1), (0, 1), (1, 1)]) 0\n",
+      "deque([(3, 1), (4, 1), (5, 1), (0, 1), (1, 1)]) 1\n",
+      "deque([(4, 1), (5, 1), (0, 1), (1, 1)]) 2\n",
+      "deque([(5, 1), (0, 1), (1, 1)]) 3\n",
+      "deque([(0, 1), (1, 1)]) 4\n",
+      "deque([(1, 1)]) 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution([1, 1, 9, 1, 1, 1], 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([(1, 1), (2, 3), (3, 2), (0, 2)]) 0\n",
+      "deque([(2, 3), (3, 2), (0, 2), (1, 1)]) 0\n",
+      "deque([(3, 2), (0, 2), (1, 1)]) 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution([2, 1, 3, 2], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#다른 사람 풀이 1: any를 썼다.\n",
+    "\n",
+    "def solution(priorities, location):\n",
+    "    queue =  [(i,p) for i,p in enumerate(priorities)]\n",
+    "    answer = 0\n",
+    "    while True:\n",
+    "        cur = queue.pop(0)\n",
+    "        if any(cur[1] < q[1] for q in queue):\n",
+    "            queue.append(cur)\n",
+    "        else:\n",
+    "            answer += 1\n",
+    "            if cur[0] == location:\n",
+    "                return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#다른 사람 풀이 2:\n",
+    "\n",
+    "def solution(p, l):\n",
+    "    ans = 0\n",
+    "    m = max(p)\n",
+    "    while True:\n",
+    "        v = p.pop(0)\n",
+    "        if m == v:\n",
+    "            ans += 1\n",
+    "            if l == 0:\n",
+    "                break\n",
+    "            else:\n",
+    "                l -= 1\n",
+    "            m = max(p)\n",
+    "        else:\n",
+    "            p.append(v)\n",
+    "            if l == 0:\n",
+    "                l = len(p)-1\n",
+    "            else:\n",
+    "                l -= 1\n",
+    "    return ans"
    ]
   }
  ],
