--- a/programmers/lev2q06_프린터_0822.ipynb
+++ b/programmers/lev2q06_프린터_0822.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
     "    queue =  [(i,p) for i,p in enumerate(priorities)]\n",
     "    answer = 0\n",
     "    while True:\n",
-    "        cur = queue.pop(0)\n",
+    "        cur = queue.pop(0)    # 한번씩만 찾기\n",
     "        if any(cur[1] < q[1] for q in queue):\n",
     "            queue.append(cur)\n",
     "        else:\n",
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#다른 사람 풀이 2:\n",
+    "#다른 사람 풀이 2: location도 계속 업데이트 하는 방식을 썼다.\n",
     "\n",
     "def solution(p, l):\n",
     "    ans = 0\n",
@@ -209,14 +209,14 @@
     "            if l == 0:\n",
     "                break\n",
     "            else:\n",
-    "                l -= 1\n",
+    "                l -= 1   #앞으로 한 칸씩 당기니까\n",
     "            m = max(p)\n",
     "        else:\n",
     "            p.append(v)\n",
     "            if l == 0:\n",
-    "                l = len(p)-1\n",
+    "                l = len(p)-1   #맨 뒤로 가니까\n",
     "            else:\n",
-    "                l -= 1\n",
+    "                l -= 1  #앞으로 한 칸 씩 당기니까\n",
     "    return ans"
    ]
   }
