헤헤 한번만에 성공

--- a/programmers/lev2q08_문자열압축_0826.ipynb
+++ b/programmers/lev2q08_문자열압축_0826.ipynb
@@ -38,19 +38,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션1: \n",
+    "#솔루션1: 통과\n",
     "\n",
+    "from collections import deque\n",
+    "\n",
+    "def zip_string(chunks):\n",
+    "    zipped = \"\"\n",
+    "    chunks = deque(chunks)\n",
+    "    while len(chunks) != 0:\n",
+    "        count = 1\n",
+    "        chunk = chunks.popleft()\n",
+    "        while len(chunks) != 0 and chunk == chunks[0]:\n",
+    "            count += 1\n",
+    "            chunks.popleft()\n",
+    "        if count == 1: zipped += chunk\n",
+    "        else: zipped += str(count) + chunk\n",
+    "    return zipped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aabbaccc'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_string(['aabb', 'accc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def solution(s):\n",
     "    length = len(s)\n",
     "    shortest = length\n",
     "    for k in range(1, length + 1):\n",
-    "        split = [s[]]\n",
+    "        split = [s[i:i+k] for i in range(0, length, k)]\n",
+    "        cur = len(zip_string(split))\n",
+    "        if cur < shortest: shortest = cur\n",
     "    return shortest"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(\"aabbaccc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(\"ababcdcdababcdcd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(\"abcabcdede\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(\"abcabcabcabcdededededede\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(\"xababcdcdababcdcd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
