신나서 까먹었다

--- a/programmers/lev2q08_문자열압축_0826.ipynb
+++ b/programmers/lev2q08_문자열압축_0826.ipynb
@@ -202,6 +202,45 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#다른 사람 풀이\n",
+    "\n",
+    "def compress(text, tok_len):\n",
+    "    words = [text[i:i+tok_len] for i in range(0, len(text), tok_len)]\n",
+    "    res = []\n",
+    "    cur_word = words[0]\n",
+    "    cur_cnt = 1\n",
+    "    for a, b in zip(words, words[1:] + ['']):\n",
+    "        if a == b:\n",
+    "            cur_cnt += 1\n",
+    "        else:\n",
+    "            res.append([cur_word, cur_cnt])\n",
+    "            cur_word = b\n",
+    "            cur_cnt = 1\n",
+    "    return sum(len(word) + (len(str(cnt)) if cnt > 1 else 0) for word, cnt in res)\n",
+    "\n",
+    "def solution(text):\n",
+    "    return min(compress(text, tok_len) for tok_len in list(range(1, int(len(text)/2) + 1)) + [len(text)])\n",
+    "\n",
+    "a = [\n",
+    "    \"aabbaccc\",\n",
+    "    \"ababcdcdababcdcd\",\n",
+    "    \"abcabcdede\",\n",
+    "    \"abcabcabcabcdededededede\",\n",
+    "    \"xababcdcdababcdcd\",\n",
+    "\n",
+    "    'aaaaaa',\n",
+    "]\n",
+    "\n",
+    "for x in a:\n",
+    "    print(solution(x))"
+   ]
   }
  ],
  "metadata": {
