--- a/programmers/lev2q09_더맵게_0827.ipynb
+++ b/programmers/lev2q09_더맵게_0827.ipynb
@@ -116,6 +116,207 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션2: 결과 똑같다! --> while 문에 문제가 있는 것 같다\n",
+    "\n",
+    "import heapq\n",
+    "\n",
+    "def solution(scoville, K):\n",
+    "    answer = 0\n",
+    "    heapq.heapify(scoville)\n",
+    "    while True : \n",
+    "        new = heapq.heappop(scoville) + 2*heapq.heappop(scoville)\n",
+    "        heapq.heappush(scoville, new)\n",
+    "        answer += 1\n",
+    "        if scoville[0] >= K: break\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution([1, 2, 3, 9, 10, 12], 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scoville = [1, 9, 3, 2, 10, 12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 9, 10, 12]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heapq.heapify(scoville)\n",
+    "scoville"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heapq.heappop(scoville)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 9, 3, 12, 10]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scoville"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scoville[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heapq.heappop(scoville)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 9, 10, 12]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scoville"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션3: 통과! while 문이 문제가 아니었다.\n",
+    "\n",
+    "import heapq\n",
+    "\n",
+    "def solution(scoville, K):\n",
+    "    answer = 0\n",
+    "    heapq.heapify(scoville)\n",
+    "    while True : \n",
+    "        if len(scoville) < 2: #예외처리\n",
+    "            return -1 \n",
+    "        new = heapq.heappop(scoville) + 2 * heapq.heappop(scoville)\n",
+    "        heapq.heappush(scoville, new)\n",
+    "        answer += 1\n",
+    "        if scoville[0] >= K: break\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
